Order request creation and comfirmation
