# swagger/v1/swagger.yaml
@@ -260,14 +260,9 @@ paths:
                   items:
                     type: object
                     required:
-                    - tracking_number
                     - test_status
                     - test_type
                     properties:
-                      tracking_number:
-                        type: string
-                      arv_number:
-                        type: string
                       test_status:
                         type: string
                       time_updated:
@@ -359,7 +354,7 @@ paths:
                   target_lab: National Reference Lab
                   sending_facility: Kamuzu Central Hospital
                   district: Lilongwe
-                  requested_by: Dr. Banda
+                  requested_by: Dr. Delete
                   art_start_date: '2020-05-10'
                   arv_number: ARV-998877
                   art_regimen: TDF/3TC/DTG
@@ -370,8 +365,8 @@ paths:
                   - status: specimen_collected
                     timestamp: '2025-09-13 02:00:00'
                     updated_by:
-                      first_name: Chikondi
-                      last_name: Banda
+                      first_name: Xmachina
+                      last_name: Delete
                       id_number: '38'
                       phone_number: ''
                 patient:
@@ -382,12 +377,10 @@ paths:
                   gender: F
                   phone_number: "+265888777666"
                 tests:
-                - tracking_number: XTRK123495
-                  arv_number: 34-4934
-                  test_status: verified
+                - test_status: verified
                   time_updated: '2025-09-13 02:00:00'
                   test_type:
-                    name: HIV Viral Load Quantitative HIV Nucleic Acid Test
+                    name: HIV Viral Load
                     nlims_code: NLIMS_TT_0071_MWI
                   test_results:
                   - measure:
@@ -403,15 +396,15 @@ paths:
                   - status: started
                     timestamp: '2025-09-13 02:00:00'
                     updated_by:
-                      first_name: Chikondi
-                      last_name: Banda
+                      first_name: Xmachina
+                      last_name: Delete
                       id_number: '38'
                       phone_number: ''
                   - status: completed
                     timestamp: '2025-09-13 03:00:00'
                     updated_by:
-                      first_name: Chikondi
-                      last_name: Banda
+                      first_name: Xmachina
+                      last_name: Delete
                       id_number: '38'
                       phone_number: ''
   "/api/v2/orders/{tracking_number}":
@@ -830,6 +823,222 @@ paths:
                       type: integer
                     tracking_number:
                       type: string
+  "/api/v2/orders/requests":
+    post:
+      summary: Request an order
+      tags:
+      - Orders
+      security:
+      - tokenAuth: []
+      parameters: []
+      responses:
+        '201':
+          description: Order Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: order created successfully
+                  data:
+                    type: object
+                    properties:
+                      tracking_number:
+                        type: string
+                        example: XTRK123495
+                      uuid:
+                        type: string
+                        example: '1234567890'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - order
+              - patient
+              - tests
+              properties:
+                order:
+                  type: object
+                  required:
+                  - district
+                  - sending_facility
+                  - tracking_number
+                  - requested_by
+                  - date_created
+                  - priority
+                  - target_lab
+                  - order_location
+                  - sample_status
+                  - drawn_by
+                  properties:
+                    uuid:
+                      type: string
+                    tracking_number:
+                      type: string
+                    district:
+                      type: string
+                    sending_facility:
+                      type: string
+                    requested_by:
+                      type: string
+                    date_created:
+                      type: string
+                      format: date-time
+                    priority:
+                      type: string
+                    target_lab:
+                      type: string
+                    order_location:
+                      type: string
+                    reason_for_test:
+                      type: string
+                    art_start_date:
+                      type: string
+                    arv_number:
+                      type: string
+                    art_regimen:
+                      type: string
+                    clinical_history:
+                      type: string
+                    lab_location:
+                      type: string
+                    source_system:
+                      type: string
+                    sample_status:
+                      type: object
+                      required:
+                      - name
+                      properties:
+                        name:
+                          type: string
+                    drawn_by:
+                      type: object
+                      required:
+                      - name
+                      properties:
+                        id:
+                          type: integer
+                        name:
+                          type: string
+                        phone_number:
+                          type: string
+                    status_trail:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          status:
+                            type: string
+                          timestamp:
+                            type: string
+                            format: date-time
+                          updated_by:
+                            type: object
+                            properties:
+                              first_name:
+                                type: string
+                              last_name:
+                                type: string
+                              id_number:
+                                type: string
+                              phone_number:
+                                type: string
+                patient:
+                  type: object
+                  required:
+                  - first_name
+                  - last_name
+                  - gender
+                  - date_of_birth
+                  properties:
+                    national_patient_id:
+                      type: string
+                    first_name:
+                      type: string
+                    last_name:
+                      type: string
+                    gender:
+                      type: string
+                    date_of_birth:
+                      type: string
+                    phone_number:
+                      type: string
+                tests:
+                  type: array
+                  description: 'Required: tests not provided'
+                  items:
+                    type: object
+                    required:
+                    - test_type
+                    properties:
+                      time_updated:
+                        type: string
+                        format: date-time
+                      test_type:
+                        type: object
+                        required:
+                        - name
+                        - nlims_code
+                        properties:
+                          name:
+                            type: string
+                          nlims_code:
+                            type: string
+  "/api/v2/orders/requests/{tracking_number}":
+    put:
+      summary: Confirm an order request
+      tags:
+      - Orders
+      security:
+      - tokenAuth: []
+      parameters:
+      - name: tracking_number
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Order Confirmed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: order confirmed successfully
+                  data:
+                    type: object
+                    example:
+                      tracking_number: XTRK123495
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - sample_type
+              properties:
+                sample_type:
+                  type: object
+                  required:
+                  - nlims_code
+                  properties:
+                    nlims_code:
+                      type: string
+                target_lab:
+                  type: string
   "/api/v1/check_new_test_catalog_version_available":
     get:
       summary: Check if a new test catalog version is available
